// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match Toggle component in dark format snapshot 1`] = `
<div>
  <label
    class="toggle-label"
    for="toggle"
  >
    Toggle Theme
  </label>
  <button
    class="theme-toggle"
    id="toggle"
  >
    <img
      alt="toggle theme"
      src="toLightToggle.svg"
    />
  </button>
</div>
`;

exports[`should match Toggle component in light format snapshot 1`] = `
<div>
  <label
    class="toggle-label"
    for="toggle"
  >
    Toggle Theme
  </label>
  <button
    class="theme-toggle"
    id="toggle"
  >
    <img
      alt="toggle theme"
      src="toDarkToggle.svg"
    />
  </button>
</div>
`;
